--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -121,23 +121,24 @@
 
   <div class="carousel-container">
     <div class="featuredContainer" id="carousel">
-    <div class="featuredRestaurants">
-      <div class="restaurantCard closed" data-category="italian" onclick="showPopup()">
-        <img class="restaurantImage" src="/pages/restaurants/tuccis.png" alt="Restaurant Image">
-        <div class="restaurantName">Tucci's</div>
-        <div class="restaurantHours">Closed</div>
-      </div>
-    </div>
-  
+
   
     <div class="featuredRestaurants">
-      <a href="/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html">
+      <a href="/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html" style="text-decoration: none;">
       <div class="restaurantCard" data-category="breakfast">
         <img class="restaurantImage" src="/pages/restaurants/uplifted-bistro.png" alt="Restaurant Image">
         <div class="restaurantName">Uplifted Bistro</div>
         <div class="restaurantHours"> 10:00AM - 08:00PM</div>
       </div>
     </a>
+    </div>
+
+    <div class="featuredRestaurants">
+      <div class="restaurantCard closed" data-category="italian" onclick="showPopup()">
+        <img class="restaurantImage" src="/pages/restaurants/tuccis.png" alt="Restaurant Image">
+        <div class="restaurantName">Tucci's</div>
+        <div class="restaurantHours">Closed</div>
+      </div>
     </div>
   
   
