updates on style

--- a/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html
@@ -196,7 +196,7 @@
                 
 
                 <div class="itemDescription">
-                  <p>Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.gg and American cheese. Served on choice of toasted bagel, croissant, or wrapgg and American cheese. Served on choice of toasted bagel, croissant, or wrap</p>
+                  <p>Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</p>
                 </div>
 
                 
@@ -776,7 +776,7 @@ function openTab(evt, tabName) {
         <div class="item-details">
           <img src="${item.image}" alt="Item Image" class="item-image">
           <div>
-            <span>${item.name}</span>s<br>
+            <span>${item.name}</span><br>
             <span class="restaurant-name">${item.restaurant}</span><br>
             $${item.price.toFixed(2)} 
           </div>
