--- a/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html
@@ -588,7 +588,7 @@ function openTab(evt, tabName) {
 
 
 <div class="checkout-container">
-    <h1 class="checkout-title">Checkout Page</h1>
+           <!--<h1 class="checkout-title">Checkout Page</h1>
     <button class="checkout-button" onclick="showCart()">Open Cart</button>
   
     <div class="cart-popup" id="cartPopup">
@@ -598,7 +598,7 @@ function openTab(evt, tabName) {
         <div class="cart-total">Total: $<span id="totalCost">0.00</span></div>
         <button onclick="checkout()" class="view-all-button">Checkout</button>
     </div>
-</div>
+</div> --> 
 
 
   <style>
