--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -25,7 +25,58 @@
         margin-bottom: 20px;
     }
 
-    /* Add more CSS for mobile responsiveness as needed */
+    /* Additional Mobile Responsive CSS */
+    .c4rd {
+        width: 100%;
+    }
+
+    /* Media Query for larger screens */
+    @media (min-width: 768px) {
+        .c4rd {
+            width: 48%;
+            margin-right: 2%;
+        }
+        .c4rd:nth-child(2n) {
+            margin-right: 0;
+        }
+    }
+
+    /* Styles for item list */
+    .item-container {
+        background: #ffffff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+        padding: 15px;
+        margin-bottom: 10px;
+    }
+
+    .item-details {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    .quantity-price {
+        font-size: 14px;
+    }
+
+    .quantity-actions {
+        display: flex;
+        align-items: center;
+    }
+
+    .btn-action {
+        cursor: pointer;
+        border: none;
+        background: none;
+        margin: 0 5px;
+    }
+
+    /* Styles for summary */
+    .summary-details {
+        font-weight: bold;
+    }
 </style>
 </head>
 <body>
@@ -80,7 +131,9 @@
     <!-- Checkout Summary -->
     <div class="c4rd">
         <h3>Checkout Summary</h3>
-        <!-- Summary details will be added here -->
+        <div id="checkoutSummary" class="summary-details">
+            <!-- Summary details will be added here -->
+        </div>
     </div>
 
     <!-- Payment -->
@@ -96,45 +149,108 @@
 </div>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-    // Function to get query parameter from URL
-    function getQueryParam(name) {
-        const urlParams = new URLSearchParams(window.location.search);
-        return urlParams.get(name);
-    }
+document.addEventListener('DOMContentLoaded', function() {
+    // Parse the cart data from URL parameters
+    const urlParams = new URLSearchParams(window.location.search);
+    const cartData = urlParams.get('cart');
+    const cartItems = JSON.parse(decodeURIComponent(cartData));
 
-    // Retrieve cart data from URL query parameter
-    const cartData = getQueryParam('cart');
+    // Render cart items
+    const cartItemsContainer = document.getElementById('c4rtL157');
+    const checkoutSummary = document.getElementById('checkoutSummary');
 
-    // Parse the cart data if it exists
-    let cartItems = [];
-    if (cartData) {
-        try {
-            cartItems = JSON.parse(decodeURIComponent(cartData));
-        } catch (error) {
-            console.error('Error parsing cart data:', error);
-        }
-    }
+    let totalPrice = 0;
+    let itemsMap = new Map(); // To store items with their quantities
 
-    // Function to render cart items on the checkout page
-    function renderCartItems() {
-        const cartList = document.getElementById('cartList');
-        if (cartItems.length > 0) {
-            cartList.innerHTML = ''; // Clear existing content
-            cartItems.forEach(function(item) {
-                const itemElement = document.createElement('div');
-                itemElement.textContent = `${item.name} - Quantity: ${item.quantity} - Price: $${item.price.toFixed(2)}`;
-                cartList.appendChild(itemElement);
-            });
+    cartItems.forEach(item => {
+        const itemTotal = item.price * item.quantity;
+        totalPrice += itemTotal;
+
+        if (itemsMap.has(item.name)) {
+            // If item already exists in the map, update its quantity
+            itemsMap.set(item.name, itemsMap.get(item.name) + item.quantity);
         } else {
-            cartList.textContent = 'Your cart is empty';
+            // If item is not in the map, add it with its quantity
+            itemsMap.set(item.name, item.quantity);
         }
-    }
+    });
 
-    // Render cart items on page load
-    renderCartItems();
+    // Render items from itemsMap
+    itemsMap.forEach((quantity, name) => {
+        const itemElement = document.createElement('div');
+        itemElement.classList.add('item-container');
+
+        const itemTotal = cartItems.find(item => item.name === name).price * quantity;
+
+        itemElement.innerHTML = `
+            <div class="item-details">
+                <div>${name}</div>
+                <div class="quantity-actions">
+                    <button class="btn-action" onclick="decreaseQuantity(this, '${name}')">-</button>
+                    <span>${quantity}</span>
+                    <button class="btn-action" onclick="increaseQuantity(this, '${name}')">+</button>
+                    <button class="btn-action" onclick="deleteItem(this, '${name}')">Delete</button>
+                </div>
+                <div class="quantity-price">${quantity} x $${(itemTotal / quantity).toFixed(2)}</div>
+            </div>
+        `;
+        cartItemsContainer.appendChild(itemElement);
+    });
+
+    // Display total price in the summary
+    checkoutSummary.textContent = `Total Price: $${totalPrice.toFixed(2)}`;
 });
 
+// Function to increase quantity
+function increaseQuantity(element, name) {
+    const quantitySpan = element.parentElement.querySelector('span');
+    let quantity = parseInt(quantitySpan.textContent);
+    quantity++;
+    quantitySpan.textContent = quantity;
+    updateTotalPrice(name, quantity);
+}
+
+// Function to decrease quantity
+function decreaseQuantity(element, name) {
+    const quantitySpan = element.parentElement.querySelector('span');
+    let quantity = parseInt(quantitySpan.textContent);
+    if (quantity > 1) {
+        quantity--;
+        quantitySpan.textContent = quantity;
+        updateTotalPrice(name, quantity);
+    }
+}
+
+// Function to delete item
+function deleteItem(element, name) {
+    const itemContainer = element.closest('.item-container');
+    itemContainer.remove();
+    updateTotalPrice(name, 0); // Pass quantity as 0 to delete the item
+}
+
+// Function to update total price
+function updateTotalPrice(name, newQuantity) {
+    const itemContainers = document.querySelectorAll('.item-container');
+    let totalPrice = 0;
+
+    // Update itemsMap and recalculate total price
+    itemContainers.forEach(itemContainer => {
+        const itemName = itemContainer.querySelector('.item-details div').textContent;
+        const quantityElement = itemContainer.querySelector('.quantity-actions span');
+        const quantity = parseInt(quantityElement.textContent);
+        const price = parseFloat(itemContainer.querySelector('.quantity-price').textContent.split('$')[1]);
+
+        if (itemName === name) {
+            quantityElement.textContent = newQuantity;
+            itemContainer.querySelector('.quantity-price').textContent = `${newQuantity} x $${(price).toFixed(2)}`;
+        }
+
+        totalPrice += quantity * price;
+    });
+
+    const checkoutSummary = document.getElementById('checkoutSummary');
+    checkoutSummary.textContent = `Total Price: $${totalPrice.toFixed(2)}`;
+}
 </script>
 </body>
 </html>
